rancher-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher
  namespace: cattle-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - rancher.example.com
      secretName: rancher-tls
  rules:
    - host: rancher.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: rancher
              port:
                number: 80
